<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_background"
    android:padding="8dp"
    map:layout_constraintBottom_toBottomOf="parent"
    map:layout_constraintEnd_toEndOf="parent"
    map:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivered"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="1"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColor="@color/black"
        android:textSize="16sp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/status" />

    <EditText
        android:id="@+id/information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/information"
        android:textColor="@color/black"
        android:textSize="16sp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/saveMarker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toEndOf="@id/removeMarker"
        map:layout_constraintTop_toBottomOf="@id/information" />

    <Button
        android:id="@+id/removeMarker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/quantum_googred100"
        android:text="@string/remove"
        android:textAllCaps="false"
        map:layout_constraintEnd_toStartOf="@id/saveMarker"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/information" />

</androidx.constraintlayout.widget.ConstraintLayout>